--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <title>CLICK TV - Entretenimiento sin límites</title>
   <!-- Asegúrate que style.css esté en la misma carpeta que este index.html -->
  <link rel="stylesheet" href="css/style.css">
+ 
+ 
+<!-- Favicons -->
+<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#000000">
+ 
+ 
 </head>
 <body>
 
