--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
  <link rel="stylesheet" href="css/style.css">
  
  
-<!-- Favicons -->
-<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-<link rel="manifest" href="manifest.json">
+<!-- Favicons con versión para evitar caché -->
+<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png?v=2">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png?v=2">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png?v=2">
+<link rel="shortcut icon" href="assets/favicon/favicon.ico?v=2" type="image/x-icon">
+<link rel="manifest" href="manifest.json?v=2">
 <meta name="theme-color" content="#000000">
+
  
  
 </head>
