Actualizacion guia de instalacion modo tarjeta

--- a/index.html
+++ b/index.html
@@ -264,79 +264,72 @@
   </div>
 </section>
 
-<!-- ===== GUÍAS DE INSTALACIÓN CLICK TV ===== -->
-<section class="guia-instalacion fade-in">
-  <h2 class="guia-titulo">Descarga e Instalación de la App</h2>
+<!-- ===== GUÍA DE INSTALACIÓN (NUEVA VERSIÓN VISUAL) ===== -->
+<section class="guia-instalacion fade-in" id="instalacion">
+  <h2 class="guia-titulo">📲 Guías de instalación paso a paso</h2>
+  <p class="guia-sub">Sigue estos pasos según tu dispositivo y empieza a disfrutar de <strong>CLICK TV</strong> en minutos.</p>
 
-  <!-- Guía iOS -->
-  <div class="guia-card">
-    <h3>🍎 Instalación en iPhone o iPad (iOS)</h3>
-    <ol class="pasos">
-      <li>Entra a la App Store y busca <strong>“Smarters Player Lite”</strong><br>
-          O entra directamente desde este enlace:<br>
-          <a href="https://apps.apple.com/co/app/smarters-player-lite/id1628995509" target="_blank" class="link-ios">
-            https://apps.apple.com/co/app/smarters-player-lite/id1628995509
-          </a>
-      </li>
-      <li>Instala la app y ábrela.</li>
-      <li>Selecciona la opción 👉 <strong>“Login with Xtream Codes API”</strong></li>
-      <li>Ingresa los datos de <strong>CLICK TV</strong>:
-        <ul class="sublista">
-          <li>👤 Usuario</li>
-          <li>🔐 Contraseña</li>
-          <li>🌐 URL del servidor</li>
-        </ul>
-      </li>
-      <li>¡Disfruta del contenido 📺🎬!</li>
-    </ol>
+  <div class="guia-grid">
+
+    <!-- iOS -->
+    <div class="guia-card">
+      <div class="guia-icon">🍏</div>
+      <h3>Instalación en iPhone / iPad (iOS)</h3>
+      <ol class="pasos">
+        <li>Abre la <strong>App Store</strong> y busca: <em>“Smarters Player Lite”</em>.</li>
+        <li>O entra directamente 👉 <a href="https://apps.apple.com/co/app/smarters-player-lite/id1628995509" target="_blank" class="link-ios">Abrir App Store</a></li>
+        <li>Instala la app y ábrela.</li>
+        <li>Selecciona la opción <strong>“Login with Xtream Codes API”</strong>.</li>
+        <li>Ingresa tus datos de acceso de <strong>CLICK TV</strong> (usuario, contraseña y URL).</li>
+        <li>¡Listo! Disfruta de tu contenido en calidad SD a Full HD 🎬</li>
+      </ol>
+    </div>
+
+    <!-- SMART TV -->
+    <div class="guia-card">
+      <div class="guia-icon">📺</div>
+      <h3>Smart TV Samsung, LG y Android TV</h3>
+      <ol class="pasos">
+        <li>Conecta tu TV a internet.</li>
+        <li>Abre la tienda de apps:
+          <ul class="sublista">
+            <li>Samsung → Smart Hub</li>
+            <li>LG → LG Content Store</li>
+            <li>Android → Google Play Store</li>
+          </ul>
+        </li>
+        <li>Busca <strong>Smart One IPTV</strong> e instálala.</li>
+        <li>Abre la app y toma una foto del código o pantalla principal.</li>
+        <li>Envíala por WhatsApp para activar tu servicio 📲</li>
+      </ol>
+    </div>
+
+    <!-- ANDROID / TV BOX -->
+    <div class="guia-card">
+      <div class="guia-icon">📦</div>
+      <h3>Android TV Box / Fire TV</h3>
+      <ol class="pasos">
+        <li>Abre la app <strong>Downloader</strong> (si no la tienes, descárgala desde Play Store).</li>
+        <li>En la barra de URL escribe:
+          <br><strong>3757322</strong> o <em>http://aftv.news/3757322</em></li>
+        <li>Presiona “Go” y espera la descarga.</li>
+        <li>Selecciona “Instalar” y permite fuentes desconocidas si lo solicita.</li>
+        <li>Abre la app <strong>CLICK TV</strong> e inicia con:
+          <ul class="sublista">
+            <li>Usuario</li>
+            <li>Contraseña</li>
+            <li>URL del servidor</li>
+          </ul>
+        </li>
+        <li>¡Listo! Disfruta canales, películas y series 🔥</li>
+      </ol>
+    </div>
+
   </div>
 
-  <!-- Guía Smart TV / Android TV -->
-  <div class="guia-card">
-    <h3>📺 Instalación en Smart TV (Samsung, LG) o Android TV</h3>
-    <ol class="pasos">
-      <li>Enciende tu dispositivo y asegúrate de estar conectado a internet.</li>
-      <li>Abre la tienda de aplicaciones:
-        <ul class="sublista">
-          <li>📦 En Samsung: Smart Hub</li>
-          <li>📦 En LG: LG Content Store</li>
-          <li>📦 En Android: Google Play Store</li>
-        </ul>
-      </li>
-      <li>Busca <strong>Smart One IPTV</strong>.</li>
-      <li>Selecciona la app y presiona <strong>Instalar</strong>.</li>
-      <li>Una vez instalada, ábrela.</li>
-      <li>En la interfaz principal (ver imagen de referencia), toma una foto de la pantalla y envíala para continuar con la activación del servicio.</li>
-    </ol>
-  </div>
-
-  <!-- Guía Android TV Box / Fire TV -->
-  <div class="guia-card">
-    <h3>🔥 Instalación en Android (TV Box o Fire TV)</h3>
-    <ol class="pasos">
-      <li>Abre la app <strong>Downloader</strong>.<br>
-          Si no la tienes, descárgala desde la Play Store.</li>
-      <li>En la barra de URL escribe:<br>
-          <code>3757322</code> o 
-          <a href="http://aftv.news/3757322" target="_blank" class="link-ios">http://aftv.news/3757322</a><br>
-          y presiona <strong>“Go” o “Ir”</strong>.
-      </li>
-      <li>Espera a que se descargue el archivo y selecciona <strong>Instalar</strong>.</li>
-      <li>Si aparece un mensaje de “Fuente desconocida”, activa <strong>“Permitir desde esta fuente”</strong>.</li>
-      <li>Abre la app instalada (<strong>CLICK TV</strong>).</li>
-      <li>Acepta los permisos si los solicita y elige:<br>👉 <strong>“XTREAM CODE”</strong></li>
-      <li>Ingresa los datos proporcionados por CLICK TV:
-        <ul class="sublista">
-          <li>👤 Nombre de usuario</li>
-          <li>🔐 Contraseña</li>
-          <li>🌐 URL del servidor (si lo solicita)</li>
-          <li>📝 Puedes nombrar el perfil como “CLICK TV” o tu nombre preferido</li>
-        </ul>
-      </li>
-      <li>✅ Listo — ya puedes disfrutar de canales, películas y series.</li>
-    </ol>
-  </div>
+  <p class="guia-nota">⚠️ Las aplicaciones y métodos de instalación pueden variar según el modelo o versión del sistema operativo.</p>
 </section>
+
 
 
 <!-- FOOTER -->
