Adicion de signo + en acordeon, eliminar opinon publica,boton demo whatsapp actualizado

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="demo-banner">✨ Prueba una <strong>demo gratuita de 3 horas</strong> y vive la experiencia CLICK TV. ✨</div>
 
       <div class="ctas">
-        <a href="https://wa.me/573194693823?text=Hola%%20quiero%20suscribirme%20a%20CLICK%20TV,%20por%20favor%20envíame%20la%20información." class="btn primary" target="_blank">
+        <a href="https://wa.me/573194693823?text=Hola,%20me%20interesar%C3%ADa%20solicitar%20un%20demo%20de%20CLICK%20TV.%20Quisiera%20coordinar%20las%203%20horas%20de%20servicio%20disponibles.%20Por%20favor,%20agradezco%20me%20env%C3%ADen%20toda%20la%20informaci%C3%B3n%20necesaria%20y%20disponibilidad%20para%20programar.%20Gracias!" class="btn primary" target="_blank">
           <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="20" height="20">
           Comenzar ahora
         </a>
@@ -213,8 +213,12 @@
 <section class="channels fade-in">
   <h2>📡 Vista Previa de Canales</h2>
   <div class="acordeon">
+
     <div class="acordeon-item">
-      <button class="acordeon-titulo">⍟ CINE CANALES</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">⍟ CINE CANALES</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <ul>
           <li>CINE | TNT HD</li><li>CINE | HBO HD</li><li>CINE | FOX HD</li><li>CINE | SPACE HD</li>
@@ -224,7 +228,10 @@
     </div>
 
     <div class="acordeon-item">
-      <button class="acordeon-titulo">⍟ FULL DEPORTES</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">⍟ FULL DEPORTES</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <ul>
           <li>DEP | ESPN</li><li>DEP | FOX SPORTS</li><li>DEP | WIN SPORTS +</li><li>DEP | DIRECTV SPORTS</li>
@@ -233,7 +240,10 @@
     </div>
 
     <div class="acordeon-item">
-      <button class="acordeon-titulo">⍟ CULTURA CANALES</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">⍟ CULTURA CANALES</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <ul>
           <li>CUL | DISCOVERY</li><li>CUL | NATIONAL GEOGRAPHIC</li><li>CUL | HISTORY</li><li>CUL | TLC</li>
@@ -242,7 +252,10 @@
     </div>
 
     <div class="acordeon-item">
-      <button class="acordeon-titulo">⍟ INFANTIL CANALES</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">⍟ INFANTIL CANALES</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <ul>
           <li>NIÑOS | CARTOON NETWORK</li><li>NIÑOS | DISNEY CHANNEL</li><li>NIÑOS | NICK JR</li><li>NIÑOS | BABY TV</li>
@@ -251,7 +264,10 @@
     </div>
 
     <div class="acordeon-item">
-      <button class="acordeon-titulo">🔞 ADULTOS</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">🔞 ADULTOS</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <ul>
           <li>XXX | BRAZZERS HD</li>
@@ -261,8 +277,10 @@
         </ul>
       </div>
     </div>
+
   </div>
 </section>
+
 
 <!-- ===== GUÍA DE INSTALACIÓN (NUEVA VERSIÓN VISUAL) ===== -->
 <section class="guia-instalacion fade-in" id="instalacion">
@@ -353,125 +371,71 @@
 
 <!-- 🔥 PREGUNTAS FRECUENTES -->
 <section class="channels fade-in">
-  <h2>Preguntas Frecuentes</h2>
+  <h2> Preguntas Frecuentes</h2>
   <div class="acordeon">
+
     <div class="acordeon-item">
-      <button class="acordeon-titulo">¿Qué es CLICK TV?</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">¿Qué es CLICK TV?</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <p>CLICK TV es un servicio de entretenimiento que te permite disfrutar de películas, series, deportes y canales en vivo de todas las plataformas, en un solo lugar.</p>
       </div>
     </div>
 
     <div class="acordeon-item">
-      <button class="acordeon-titulo">¿Cuánto cuesta CLICK TV?</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">¿Cuánto cuesta CLICK TV?</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <p>CLICK TV ofrece diferentes planes desde $15.000 hasta $25.000, dependiendo del número de dispositivos que desees conectar.</p>
       </div>
     </div>
 
     <div class="acordeon-item">
-      <button class="acordeon-titulo">¿Dónde puedo ver CLICK TV?</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">¿Dónde puedo ver CLICK TV?</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <p>Puedes ver CLICK TV en Smart TVs (Samsung, LG, Android), celulares, tablets o computadoras. Solo necesitas conexión a internet.</p>
       </div>
     </div>
 
     <div class="acordeon-item">
-      <button class="acordeon-titulo">¿Cómo cancelo mi suscripción?</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">¿Cómo cancelo mi suscripción?</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <p>Solo necesitas escribirnos por WhatsApp al número de soporte y nuestro equipo gestionará tu cancelación de forma rápida y sencilla.</p>
       </div>
     </div>
 
     <div class="acordeon-item">
-      <button class="acordeon-titulo">¿Qué puedo ver en CLICK TV?</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">¿Qué puedo ver en CLICK TV?</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <p>CLICK TV cuenta con miles de películas, series, canales deportivos, canales para adultos y contenido infantil. ¡Todo en un solo lugar!</p>
       </div>
     </div>
 
     <div class="acordeon-item">
-      <button class="acordeon-titulo">¿Es bueno CLICK TV para los niños?</button>
+      <button class="acordeon-titulo">
+        <span class="acordeon-texto">¿Es bueno CLICK TV para los niños?</span>
+        <span class="acordeon-icon">+</span>
+      </button>
       <div class="acordeon-contenido">
         <p>Sí. CLICK TV incluye una selección de canales y contenido especialmente diseñado para niños, con opciones seguras y educativas.</p>
       </div>
     </div>
+
   </div>
 </section>
-
-
-
-<!-- 🔥 RESEÑAS DE CLIENTES -->
-<section id="reseñas" class="fade-in" style="background-color:#1e1e1e; color:#fff; padding:60px 20px; text-align:center;">
-  <h2 style="font-size:2em; margin-bottom:40px; color:#f04;">Lo que opinan nuestros clientes 🔥</h2>
-  <div class="reviews-carousel">
-    <div class="reviews-track"></div>
-  </div>
-</section>
-<script>
-// ====== GENERADOR DE RESEÑAS ======
-const reseñas = [
-  {nombre:"Carlos M.", texto:"Excelente servicio, la calidad del contenido es brutal 🔥", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Carlos"},
-  {nombre:"Laura G.", texto:"Lo uso todos los días, muy fluido y sin cortes.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Laura"},
-  {nombre:"David R.", texto:"Vale totalmente la pena, soporte rápido y amable.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=David"},
-  {nombre:"Natalia P.", texto:"La mejor opción que he probado, 100% recomendado.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Natalia"},
-  {nombre:"Andrés V.", texto:"Variedad de canales y buena estabilidad 👌", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Andres"},
-  {nombre:"Mariana L.", texto:"Me encantan los canales premium, se ven perfectos.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Mariana"},
-  {nombre:"Felipe C.", texto:"Funciona genial en mi Smart TV Samsung.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Felipe"},
-  {nombre:"Camila H.", texto:"Fácil de instalar, soporte me ayudó en minutos 💪", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Camila"},
-  {nombre:"José P.", texto:"Buena relación calidad-precio, lo recomiendo.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Jose"},
-  {nombre:"Vanessa Q.", texto:"Excelente atención al cliente, muy confiables.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Vanessa"},
-  {nombre:"Miguel A.", texto:"No esperaba tanta calidad por tan poco dinero 😍", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Miguel"},
-  {nombre:"Paola D.", texto:"Llevo 3 meses y cero fallas, genial.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Paola"},
-  {nombre:"Santiago T.", texto:"Los canales deportivos van de lujo ⚽🔥", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Santiago"},
-  {nombre:"Tatiana S.", texto:"Buena calidad de imagen, soporte 10/10.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Tatiana"},
-  {nombre:"Cristian E.", texto:"Totalmente recomendable, muy estable.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Cristian"},
-  {nombre:"Valeria R.", texto:"Funciona incluso en mi Android Box viejo.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Valeria"},
-  {nombre:"Daniel M.", texto:"Lo uso en mi LG Smart TV sin problema.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Daniel"},
-  {nombre:"Juliana Z.", texto:"Excelente interfaz, moderna y fluida.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Juliana"},
-  {nombre:"Samuel N.", texto:"Puedo ver todo el contenido sin cortes, brutal.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Samuel"},
-  {nombre:"Diana C.", texto:"Muy buena atención, siempre responden rápido.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Diana"},
-  {nombre:"Andrea P.", texto:"Los canales premium se ven full HD 😍", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Andrea"},
-  {nombre:"Esteban G.", texto:"Increíble estabilidad, muy recomendado.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Esteban"},
-  {nombre:"Oscar R.", texto:"He probado varios servicios, y este es el mejor.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Oscar"},
-  {nombre:"Carolina M.", texto:"Buena experiencia, se nota el compromiso del equipo.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Carolina"},
-  {nombre:"Isabela J.", texto:"Mi familia está feliz con este servicio 💕", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Isabela"},
-  {nombre:"Jhonatan D.", texto:"Servicio muy completo, buena calidad y soporte.", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Jhonatan"},
-  {nombre:"Lizeth P.", texto:"Llevo meses con ellos, cero quejas 💯", avatar:"https://api.dicebear.com/9.x/adventurer/svg?seed=Lizeth"}
-];
-
-// Duplicamos para loop infinito visual
-const track = document.querySelector('.reviews-track');
-const reseñasExtendidas = [...reseñas, ...reseñas];
-
-reseñasExtendidas.forEach(r => {
-  const card = document.createElement('div');
-  card.classList.add('review-card');
-  card.innerHTML = `
-    <div class="review-header">
-      <img src="${r.avatar}" alt="${r.nombre}" class="review-avatar">
-      <div>
-        <div class="review-name">${r.nombre}</div>
-        <div class="review-stars">★★★★★</div>
-      </div>
-    </div>
-    <p class="review-text">${r.texto}</p>
-  `;
-  track.appendChild(card);
-});
-
-// Ajustar velocidad del scroll automático
-let scrollSpeed = 1.2; // aumenta este valor para más velocidad
-function autoScroll() {
-  track.scrollLeft += scrollSpeed;
-  if (track.scrollLeft >= track.scrollWidth / 2) {
-    track.scrollLeft = 0;
-  }
-  requestAnimationFrame(autoScroll);
-}
-autoScroll();
-</script>
-
 
 <script>
 document.addEventListener("DOMContentLoaded", ()=>{
