--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 <section id="planes" class="planes fade-in">
   <h2 class="planes-titulo">🔥 Elige tu plan perfecto</h2>
   <p class="planes-descripcion">Contenido premium en calidad SD a Full HD. Escoge el plan que mejor se adapte a tus dispositivos y disfruta sin límites.</p>
+<H2></H2>
 
   <div class="plan-container">
 
@@ -184,6 +185,7 @@
       <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV!%20Quiero%20activar%20el%20plan%20de%205%20dispositivos." target="_blank" class="btn-plan">Activar plan</a>
     </div>
   </div>
+<H2></H2>
      <p class="planes-nota">⚠️ Los precios aplican solo para Colombia. Fuera del país las tarifas pueden variar según la región.</p>
 </section>
 
@@ -288,59 +290,110 @@
 
   <div class="guia-grid">
 
-    <!-- iOS -->
-    <div class="guia-card">
-      <div class="guia-icon">🍏</div>
-      <h3>Instalación en iPhone / iPad (iOS)</h3>
-      <ol class="pasos">
-        <li>Abre la <strong>App Store</strong> y busca: <em>“Smarters Player Lite”</em>.</li>
-        <li>O entra directamente 👉 <a href="https://apps.apple.com/co/app/smarters-player-lite/id1628995509" target="_blank" class="link-ios">Abrir App Store</a></li>
-        <li>Instala la app y ábrela.</li>
-        <li>Selecciona la opción <strong>“Login with Xtream Codes API”</strong>.</li>
-        <li>Ingresa tus datos de acceso de <strong>CLICK TV</strong> (usuario, contraseña y URL).</li>
-        <li>¡Listo! Disfruta de tu contenido en calidad SD a Full HD 🎬</li>
-      </ol>
-    </div>
+<!-- iOS -->
+<div class="guia-card">
+  <div class="guia-icon">🍏</div>
+  <h3>Instalación en iPhone / iPad (iOS)</h3>
+  <ol class="pasos">
+    <li>Abre la <strong>App Store</strong> y busca: <em>“Smarters Player Lite”</em>.</li>
+    <li>O entra directamente 👉 <a href="https://apps.apple.com/co/app/smarters-player-lite/id1628995509" target="_blank" class="link-ios">Abrir App Store</a></li>
+    <li>Instala la app y ábrela.</li>
+    <li>Selecciona la opción <strong>“Login with Xtream Codes API”</strong>.</li>
+    <li>Ingresa tus datos de acceso de <strong>CLICK TV</strong> (usuario, contraseña y URL).</li>
+    <li>¡Listo! Disfruta de tu contenido en calidad SD a Full HD 🎬</li>
+  </ol>
 
-    <!-- SMART TV -->
-    <div class="guia-card">
-      <div class="guia-icon">📺</div>
-      <h3>Smart TV Samsung, LG y Android TV</h3>
-      <ol class="pasos">
-        <li>Conecta tu TV a internet.</li>
-        <li>Abre la tienda de apps:
-          <ul class="sublista">
-            <li>Samsung → Smart Hub</li>
-            <li>LG → LG Content Store</li>
-            <li>Android → Google Play Store</li>
-          </ul>
-        </li>
-        <li>Busca <strong>Smart One IPTV</strong> e instálala.</li>
-        <li>Abre la app y toma una foto del código o pantalla principal.</li>
-        <li>Envíala por WhatsApp para activar tu servicio 📲</li>
-      </ol>
-    </div>
+  <!-- ✅ Enlace elegante a WhatsApp -->
+  <p style="margin-top:14px;text-align:center;font-size:0.95rem;color:#ccc;">
+    ¿Aún no tienes tus credenciales de acceso?  
+    <br>
+    <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV!%20Deseo%20recibir%20mis%20credenciales%20de%20acceso%20para%20iPhone%20%2F%20iPad." 
+       target="_blank" 
+       style="display:inline-block;margin-top:6px;background:linear-gradient(90deg,#25D366,#128C7E);color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:600;box-shadow:0 0 10px rgba(37,211,102,0.4);transition:all .3s ease;">
+       📩 Solicitar acceso por WhatsApp
+    </a>
+  </p>
+</div>
 
-    <!-- ANDROID / TV BOX -->
-    <div class="guia-card">
-      <div class="guia-icon">📦</div>
-      <h3>Android TV Box / Fire TV</h3>
-      <ol class="pasos">
-        <li>Abre la app <strong>Downloader</strong> (si no la tienes, descárgala desde Play Store).</li>
-        <li>En la barra de URL escribe:
-          <br><strong>3757322</strong> o <em>http://aftv.news/3757322</em></li>
-        <li>Presiona “Go” y espera la descarga.</li>
-        <li>Selecciona “Instalar” y permite fuentes desconocidas si lo solicita.</li>
-        <li>Abre la app <strong>CLICK TV</strong> e inicia con:
-          <ul class="sublista">
-            <li>Usuario</li>
-            <li>Contraseña</li>
-            <li>URL del servidor</li>
-          </ul>
-        </li>
-        <li>¡Listo! Disfruta canales, películas y series 🔥</li>
-      </ol>
-    </div>
+
+<!-- SMART TV -->
+<div class="guia-card">
+  <div class="guia-icon">📺</div>
+  <h3>Smart TV Samsung, LG y Android TV</h3>
+  <ol class="pasos">
+    <li>Conecta tu TV a internet.</li>
+    <li>Abre la tienda de apps:
+      <ul class="sublista">
+        <li>Samsung → Smart Hub</li>
+        <li>LG → LG Content Store</li>
+        <li>Android → Google Play Store</li>
+      </ul>
+    </li>
+    <li>Busca <strong>Smart One IPTV</strong> e instálala.</li>
+
+    <!-- Imagen del logo -->
+    <li style="list-style:none; margin-top:10px; text-align:center;">
+      <p style="color:#ccc; font-size:0.9rem;">El logo de Smart One IPTV es el siguiente:</p>
+      <img src="assets/smart-one.png" alt="Smart One IPTV logo" style="max-width:160px; margin-top:8px; border-radius:8px; box-shadow:0 0 10px rgba(229,9,20,0.3);">
+    </li>
+
+    <li>Abre la app y toma una foto del código o pantalla principal.</li>
+
+    <!-- Imagen de la interfaz -->
+    <li style="list-style:none; text-align:center;">
+      <img src="assets/interfaz.png" alt="Interfaz Smart One IPTV" style="max-width:250px; margin-top:8px; border-radius:8px; box-shadow:0 0 10px rgba(229,9,20,0.3);">
+    </li>
+
+    <li>Envíala por WhatsApp para activar tu servicio 📲</li>
+  </ol>
+
+  <!-- ✅ Enlace elegante a WhatsApp -->
+  <p style="margin-top:14px;text-align:center;font-size:0.95rem;color:#ccc;">
+    Envía la imagen generada por la app y activa tu servicio de <strong>CLICK TV</strong> aquí 👇  
+    <br>
+    <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV!%20Adjunto%20la%20imagen%20de%20mi%20Smart%20TV%20para%20activar%20mi%20servicio." 
+       target="_blank" 
+       style="display:inline-block;margin-top:6px;background:linear-gradient(90deg,#25D366,#128C7E);color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:600;box-shadow:0 0 10px rgba(37,211,102,0.4);transition:all .3s ease;">
+       💬 Enviar imagen por WhatsApp
+    </a>
+  </p>
+</div>
+
+
+
+
+<!-- ANDROID / TV BOX -->
+<div class="guia-card">
+  <div class="guia-icon">📦</div>
+  <h3>Android TV Box / Fire TV</h3>
+  <ol class="pasos">
+    <li>Abre la app <strong>Downloader</strong> (si no la tienes, descárgala desde Play Store).</li>
+    <li>En la barra de URL escribe:
+      <br><strong>3757322</strong> o <em>http://aftv.news/3757322</em></li>
+    <li>Presiona “Go” y espera la descarga.</li>
+    <li>Selecciona “Instalar” y permite fuentes desconocidas si lo solicita.</li>
+    <li>Abre la app <strong>CLICK TV</strong> e inicia con:
+      <ul class="sublista">
+        <li>Usuario</li>
+        <li>Contraseña</li>
+        <li>URL del servidor</li>
+      </ul>
+    </li>
+    <li>¡Listo! Disfruta canales, películas y series 🔥</li>
+  </ol>
+
+  <!-- ✅ Enlace elegante a WhatsApp -->
+  <p style="margin-top:14px;text-align:center;font-size:0.95rem;color:#ccc;">
+    ¿Necesitas tus credenciales de acceso para tu TV Box o Fire TV?  
+    <br>
+    <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV!%20Deseo%20recibir%20mis%20credenciales%20de%20acceso%20para%20Android%20TV%20Box%20%2F%20Fire%20TV." 
+       target="_blank" 
+       style="display:inline-block;margin-top:6px;background:linear-gradient(90deg,#25D366,#128C7E);color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:600;box-shadow:0 0 10px rgba(37,211,102,0.4);transition:all .3s ease;">
+       💬 Solicitar acceso por WhatsApp
+    </a>
+  </p>
+</div>
+
 
   </div>
 
